# maxent-gan

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  callbacks.py  collect_bn_stats.py  dim_reduction.py  general_utils.py  pyproject.toml  run.py  run_cp.py  run_norm_constant.py  run_sngan.py  test.py  train.py  train_flow.py  train_meta.py  validate_gans.py
.dvc/: config
checkpoints/: .gitignore  dcgan.dvc  dcgan_mimicry.dvc  dcgan_studio.dvc  mlp.dvc  sagan_studio.dvc  sngan_googledisk  sngan_hinge_dot.dvc  sngan_mimicry.dvc  sngan_ns_dot.dvc  sngan_resnet_hinge_dot.dvc  sngan_studio.dvc  stacked_mnist_dcgan.dvc  stylegan2_studio.dvc  wgan_gp_dot.dvc  wgan_gp_in.dvc  wgan_gp_studio.dvc
configs/: common.yml  common_2d.yml  common_gauss.yml  common_mnist.yml  fid.yml  mcmc_exp.yml  no_sample.yml  train.yml  train_2d.yml  train_2d_iw.yml  train_3d_iw.yml  train_iw.yml  train_meta.yml  train_meta_2d.yml  train_meta_3d.yml
docs/: ex2mcmc_result.md  maxent_sample_tutorial.md  revival_log.md
maxent_gan/: distribution.py  mcmc.py  sample.py
notebooks/: 2d_grid.ipynb  2d_report.ipynb  2d_ring.ipynb  Inception_dcgan_cifar.ipynb  backward_through_sampling.ipynb  celeba_mimicry.ipynb  cifar_report.ipynb  dcgan.ipynb  dcgan_train.ipynb  demo.ipynb  ex2mcmc.ipynb  fid_stats.ipynb  gan_stats.ipynb  gaussiand_grid.ipynb  gaussians_grid.ipynb  gaussians_ring.ipynb  kmeans.ipynb  maxent_sample_tutorial.ipynb  maxent_train_tutorial.ipynb  plot_dim_reduction.ipynb  plot_results.ipynb  sample_sngan.ipynb  smart_init.ipynb  some.txt  train.ipynb  train_meta_results.ipynb  validation.ipynb
preprocess/: collect_bn_stats.py  validate_gans.py
run_scripts/: 2d_exps.sh  cluster.sh  dim_reduction.sh  discriminator.sh  dumbs.sh  gaussians_2d.sh  get_ckpts.sh  get_stats.sh  run_exps.sh  some_exps.sh  some_exps_2.sh  train_2d.sh
scripts/: 1807_ex2_exp.sh  2d_exps.sh  cluster.sh  dim_reduction.sh  get_ckpts.sh  get_stats.sh  install_studiogan.sh  resnet34.sh  run_exps.sh  snresnet.sh  some_exps_2.sh  train_2d_d.sh  train_3d.sh  train_dcgan.sh  wgan-gp.sh  (+1 more)
(+1470 files in other folders)
