[tool.poetry]
name = "soul_gan"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"
repository = ""
documentation = "TBD"

[tool.black]
target-version = ["py38"]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
torch = "~1.10"
torchvision = "~0.11"
Cython = ">=0"
tqdm = "^4.5"
sklearn = ">=0"
POT = ">=0"
pyro-ppl = "^1.5"
easydict = "^1"
seaborn = ">=0"
pyyaml = ">=0"
pytorch-fid = {git = "https://github.com/mseitzer/pytorch-fid"}
wandb = "^0.12.6"
pyyml = "^0.0.2"
pre-commit = "^2.15.0"


# [tool.isort]
# src_paths = ["soul_gan"]
# multi_line_output = 3
# include_trailing_comma = true
# force_grid_wrap = 0
# use_parentheses = true
# line_length = 100
# lines_after_imports = 2
imageio = "^2.13.5"
studiogan = {path = "thirdparty/studiogan"}
ninja = "^1.10.2"
h5py = "^3.6.0"
kornia = "^0.6.2"
pandas = "^1.3.5"
scipy = "^1.7.3"
click = "^8.0.3"
requests = "^2.26.0"
pyspng = "^0.1.0"
imageio-ffmpeg = "^0.4.5"
prdc = "^0.2"
